--- a/index.html
+++ b/index.html
@@ -4,96 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FORM</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      margin: 0;
-      padding: 0;
-    }
-
-    #form_body {
-      background-color: #f9f9f9;
-      width: 80%;
-      max-width: 400px;
-      margin: 20px auto;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-
-    label {
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    input[type="date"],
-    input[type="tel"],
-    input[type="password"],
-    textarea,
-    select {
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    input[type="radio"] {
-      margin-right: 5px;
-    }
-
-    button[type="submit"] {
-      padding: 10px 20px;
-      background-color: #007bff; /* Blue color for Submit button */
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    button[type="submit"]:hover {
-      background-color: #0056b3;
-    }
-
-    button[type="reset"] {
-      padding: 10px 20px;
-      background-color: #ff0000;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button[type="reset"]:hover {
-      background-color: #cc0000;
-    }
-
-    #success-message {
-      color: green;
-    }
-
-    #gender-options {
-      display: flex;
-      margin-bottom: 10px;
-    }
-
-    #gender-options label,
-    #gender-options input {
-      margin-right: 10px;
-    }
-
-    #terms {
-      margin-top: 10px; /* Add space above "I agree to all the Terms & Conditions" */
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
   <script>
     function sub() {
       alert("Submitted Successfully");
@@ -107,7 +19,7 @@
       <input type="text" id="name" />
 
       <label for="mailid">Email:</label>
-      <input type="email" id "mailid" />
+      <input type="email" id="mailid" />
 
       <label for="dob">Date of Birth:</label>
       <input type="date" id="dob" />
@@ -142,13 +54,13 @@
       </div>
     </form>
   </div>
-  <div id="success-message"></div>
+  <!-- <div id="success-message"></div>
   <script>
     const submitButton = document.querySelector('button[type="button"]');
     submitButton.addEventListener('click', function () {
       const successMessage = document.getElementById('success-message');
       successMessage.textContent = 'Form submitted successfully!';
     });
-  </script>
+  </script> -->
 </body>
 </html>
